--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-  "buildCommand": "yarn build",
-  "outputDirectory": ".next",
-  "installCommand": "yarn install",
-  "framework": "nextjs",
-  "rootDirectory": "fitcree-design-app"
+  "buildCommand": "cd fitcree-design-app && yarn build",
+  "outputDirectory": "fitcree-design-app/.next",
+  "installCommand": "cd fitcree-design-app && yarn install",
+  "framework": "nextjs"
 }
 
